--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemon": "^3.1.3",
     "payu": "^0.0.1",
     "payu-websdk": "^1.0.0",
-    "puppeteer": "^22.12.1"
+    "puppeteer": "^22.12.1",
+    "xlsx": "^0.18.5"
   }
 }
