--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 Database=mongodb+srv://rentangadi:rentangadi@cluster0.uycn7mi.mongodb.net/
-port=8000
+port=7000
+PORTBACKUP=8000
 PAYU_MERCHANT_KEY=h0U963
 PAYU_MERCHANT_SALT=ILhRpQC7cqRlrb162OBqjqC1TzphaqlR
-PAYU_ENVIRONMENT=PROD 
+PAYU_ENVIRONMENT=PROD
