--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "google-trends-api": "^4.9.2",
     "jsonwebtoken": "^9.0.2",
     "jssha": "^3.3.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.7.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
